feat(navigation): add skip and back buttons to focus and pause screens

--- a/src/ui/popup/popup.html
+++ b/src/ui/popup/popup.html
@@ -83,7 +83,16 @@
       <!-- Focus-Page -->
       <div id="screen-focus" style="display: none">
         <div class="title">Study time</div>
-        <div id="countdown-timer">00:00:00</div>
+        <div id="countdown-timer-focus">00:00:00</div>
+        <button id="settings-button-focus">back</button>
+        <button id="skip-focus-button">skip</button>
+      </div>
+      <!--Pause-Page -->
+      <div id="screen-pause" style="display: none">
+        <div class="title">Pause time</div>
+        <div id="countdown-timer-pause">00:00:00</div>
+        <button id="settings-button-pause">back</button>
+        <button id="skip-pause-button">skip</button>
       </div>
     </div>
   </body>
