--- a/src/ui/popup/popup.html
+++ b/src/ui/popup/popup.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>FocusUp</title>
-    <link href="popup.css" rel="stylesheet" type="text/css" />
+    <link href="popup.css" rel="stylesheet" />
     <script type="module" src="popup.js"></script>
   </head>
   <body>
